# linear-algebra-tutor

./: .gitignore  ADVANCED_SOLVERS.md  CLAUDE.md  EXERCISE_GENERATORS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GUIDED_LEARNING.md  INSTALL.md  INTERACTIVE_DEMO.md  MANUAL_TEST_GUIDE.md  README.md  TEST_RESULTS_GUIDED_LEARNING.md  UX_FIXES_COMPLETED.md  UX_IMPROVEMENTS.md  VISUALIZATIONS.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_cli.py  test_ux.py
.claude/: settings.local.json
linalg_tutor/: __init__.py  __main__.py
linalg_tutor/cli/: app.py  guided_app.py
linalg_tutor/cli/commands/: __init__.py  exercise.py  generate.py  solve.py  visualize.py
linalg_tutor/cli/ui/: __init__.py  main_menu.py  prompts.py
linalg_tutor/content/: exercises_library.py
linalg_tutor/core/exercises/: __init__.py  base.py  computational.py  fill_in.py  multiple_choice.py  true_false.py
linalg_tutor/core/generators/: __init__.py  base.py  linear_systems.py  matrix_generators.py  vector_generators.py
linalg_tutor/core/progress/: __init__.py  session_state.py  tracker.py
linalg_tutor/core/solver/: __init__.py  base.py  decomposition.py  eigenvalue.py  gaussian_elimination.py  matrix_ops.py  simple_solution.py  vector_ops.py
linalg_tutor/visualization/: __init__.py  geometric.py  linear_systems.py  matrix_viz.py  vector_viz.py
tests/: conftest.py
tests/integration/: test_guided_app.py
tests/unit/test_exercises/: test_computational.py  test_multiple_choice.py  test_true_false.py
tests/unit/test_progress/: test_session_state.py  test_tracker.py
tests/unit/test_solver/: test_vector_ops.py
tests/unit/test_ui/: test_exercise_prompt.py
