[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linalg-tutor"
version = "0.1.0"
description = "Interactive Linear Algebra Teaching CLI Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Linear Algebra Tutor Team"}
]
keywords = ["linear-algebra", "education", "cli", "mathematics", "teaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
    "matplotlib>=3.8.0",
    "plotext>=5.2.8",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[project.scripts]
linalg-tutor = "linalg_tutor.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["linalg_tutor*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=linalg_tutor",
    "--cov-report=term-missing",
    "--cov-report=html",
]
